--- a/1. Welcome Java/.project
+++ b/1. Welcome Java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>1. Welcome Java</name>
+	<name>1_Welcome_Java</name>
 	<comment></comment>
 	<projects>
 	</projects>
