--- a/7_Java_OOP_Student/.project
+++ b/7_Java_OOP_Student/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>26. Classes &amp; Object</name>
+	<name>7_Java_OOP_Student</name>
 	<comment></comment>
 	<projects>
 	</projects>
