--- a/11_Java_Peson_StaticField/.project
+++ b/11_Java_Peson_StaticField/.project
@@ -1,30 +1,28 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-    	
-    <name>11_Java_Peson_StaticField</name>
-    	
-    <comment/>
-    	
-    <projects>
+	<name>11_Java_Peson_StaticField</name>
+	<comment></comment>
+	<projects>
 	</projects>
-    	
-    <buildSpec>
-        		
-        <buildCommand>
-            			
-            <name>org.eclipse.jdt.core.javabuilder</name>
-            			
-            <arguments>
+	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
 			</arguments>
-            		
-        </buildCommand>
-        	
-    </buildSpec>
-    	
-    <natures>
-        		
-        <nature>org.eclipse.jdt.core.javanature</nature>
-        	
-    </natures>
-    
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+	</natures>
+	<filteredResources>
+		<filter>
+			<id>1625974594624</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
