--- a/28_Java_ACPQueue/.classpath
+++ b/28_Java_ACPQueue/.classpath
@@ -7,7 +7,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/proo003/code/SE281-A4/lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="/Users/proo003/code/SE281-A4/lib/junit-4.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/Jason/Uoa/Compsys/eclipse_workspace/UOA_SOFTENG_281_EXERCISE/28_Java_ACPQueue/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Jason/Uoa/Compsys/eclipse_workspace/UOA_SOFTENG_281_EXERCISE/28_Java_ACPQueue/lib/junit-4.13.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
